force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/Specialist_Request_Approval_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Specialist Request Approval Mapping</label>
    <pluralLabel>Specialist Request Approval Mapping</pluralLabel>
</CustomObject>