force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <description>Specify 18 digit Id of Approver users separated by comma in case of multiple.</description>
    <label>Approvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>