force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/fields/Primary_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Focus_Area__c</fullName>
    <label>Primary Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
                <default>true</default>
                <label>Cloud</label>
            </value>
            <value>
                <fullName>Integration/Dev Ops</fullName>
            </value>
            <value>
                <fullName>Database/Apps</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>