force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/fields/Secondary_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Focus_Area__c</fullName>
    <label>Secondary Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aptare</fullName>
                <default>true</default>
                <label>Aptare</label>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform</fullName>
            </value>
            <value>
                <fullName>Microsoft Office 365 (o365)</fullName>
            </value>
            <value>
                <fullName>NAS</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Service Now</fullName>
            </value>
            <value>
                <fullName>Splubnk</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>vCloud Director</fullName>
            </value>
            <value>
                <fullName>vRA/vRO</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Hyper-V</fullName>
            </value>
            <value>
                <fullName>AHV</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>3rd Party Hardware</fullName>
            </value>
            <value>
                <fullName>Sizing</fullName>
            </value>
            <value>
                <fullName>Performance / Scaling</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Multi-tenancy / RBAC</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Containers / Openstack</fullName>
            </value>
            <value>
                <fullName>SAP HANA</fullName>
            </value>
            <value>
                <fullName>DB2</fullName>
            </value>
            <value>
                <fullName>Epic / Cache</fullName>
            </value>
            <value>
                <fullName>NoSQL - Mongo</fullName>
            </value>
            <value>
                <fullName>NoSQL - Cassandra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>