force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/fields/Specialist_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Record_Type_Name__c</fullName>
    <label>Specialist Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCTO</fullName>
                <default>true</default>
                <label>FCTO</label>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>