force-app/main/default/objects/Specialist_Request_Approval_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Primary_Focus_Area__c</columns>
    <columns>Secondary_Focus_Area__c</columns>
    <columns>Specialist_Record_Type_Name__c</columns>
    <columns>Approvers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>